# projekt_badawczy

./: .gitignore  Manifest.toml  Project.toml  README.md  docker-compose.yml  results.txt  time_test.py
aspnetapp/: Dockerfile  appsettings.json  aspnetapp.csproj  requirements.txt
aspnetapp/app/: Program.cs  Startup.cs
aspnetapp/app/Controllers/: ValuesController.cs
go_gin/: .env  go.mod  go.sum  main.go
go_gin/database/: database.go
go_gin/model/: model.go
java_spring/: Dockerfile  pom.xml
js_express/: app.js  dockerfile  package.json
js_express/src/config/: config.json
js_express/src/database/: database.js
js_express/src/models/: product.js
julia_genie/: Dockerfile  Project.toml  bootstrap.jl  routes.jl
julia_genie/config/env/: dev.jl
julia_genie/db/: connection.yml
julia_genie/src/: JuliaGenie.jl
julia_genie/test/: runtests.jl
kotlin_ktor/: dockerfile  pom.xml
load_tests/: load_tests.jmx  testresults.jtl
php_laravel/badawczy/: .env  .env.example  Dockerfile
php_laravel/badawczy/routes/: web.php
python_fastapi/: Dockerfile  requirements.txt
python_fastapi/app/: main.py
python_flask/: app.py
ruby_on_rails/: Gemfile  dockerfile
ruby_on_rails/app/controllers/: database_controller.rb
ruby_on_rails/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
ruby_on_rails/db/: schema.rb
ruby_on_rails/db/migrate/: 20230411130446_create_products.rb
rust_rocket/: .env  Cargo.toml  Dockerfile
rust_rocket/src/: lib.rs  main.rs  models.rs  schema.rs
sql/: create_tables.sql  fill_tables.sql
(+15 files in other folders)
