[package]
name = "rest-api"
version = "0.1.0"
authors = ["TmLev <sololev27@gmail.com>"]
edition = "2018"

[dependencies]
diesel = "1.4.7"
postgres = "0.19"
tokio = { version = "1.16.0", features = ["full"] }
tokio-postgres = { version = "0.7.8" }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
